Automatic Alpha Bleeding
copied from sk7725/BetaMindy#44