@@ -1,19 +1,19 @@
 plugins{
-    id 'java'
+    id "java"
+    id "idea"
 }
 
 group pGroup
-apply plugin: 'idea'
 
+sourceCompatibility = 1.8
 sourceSets.main{
     java.srcDir("src/")
     resources.srcDir("assets/")
 }
 
-
 repositories{
     mavenCentral()
-    maven { url "https://jitpack.io" }
+    maven{url "https://jitpack.io"}
 }
 
 dependencies{
@@ -22,6 +22,12 @@ dependencies{
     implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
     implementation "com.squareup:javapoet:$javapoetVersion"
     implementation "com.github.Anuken:jabel:$jabelVersion"
+}
+
+ext{
+    isWindows = {
+        return System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows")
+    }
 }
 
 jar{
@@ -34,32 +40,15 @@ jar{
     }
 }
 
-task dexify(type: Jar){
-    archiveName "$pArtifactFilename"
+tasks.withType(JavaCompile){
+    sourceCompatibility = 15
+    targetCompatibility = 8
 
-    final File jarArtifact = new File(tasks.jar.archiveFile.get().asFile.parent, "raw-$pArtifactFilename"),
-               dexedArtifact = new File(tasks.dexify.getTemporaryDir(), "dexed.jar")
-    doFirst{
-        exec{
-            workingDir dexedArtifact.parent
-            def command = ["d8", "--min-api", pMinApi, "--output", dexedArtifact, jarArtifact]
-            if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows'))
-                commandLine("cmd", "/c", *command)
-            else
-                commandLine(*command)
-
-        }
+    options.encoding("UTF-8")
+    if(JavaVersion.current() != JavaVersion.VERSION_1_8){
+        options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
     }
 
-    from(zipTree(jarArtifact), zipTree(dexedArtifact))
-}
-
-sourceCompatibility = 8
-targetCompatibility = 8
-
-tasks.withType(JavaCompile){
-    targetCompatibility = 8
-    sourceCompatibility = 8
     doFirst{
         options.compilerArgs = options.compilerArgs.findAll{ it != '--enable-preview' }
     }
@@ -67,6 +56,40 @@ tasks.withType(JavaCompile){
 
 tasks.withType(JavaExec){
     jvmArgs += "--enable-preview"
+}
+
+task alphableed doFirst{
+    exec{
+        workingDir "$rootDir"
+
+        println "Alpha-bleeding sprites..."
+        if(isWindows()){
+            commandLine("cmd", "/c", "alpha-bleeding-windows.exe", "--replace", "./assets/sprites/")
+        }else{
+            commandLine("./alpha-bleed", "./assets/sprites/")
+        }
+    }
+}
+
+task dexify(type: Jar){
+    archiveName "$pArtifactFilename"
+
+    final File  jarArtifact = new File(tasks.jar.archiveFile.get().asFile.parent, "raw-$pArtifactFilename"),
+                dexedArtifact = new File(tasks.dexify.getTemporaryDir(), "dexed.jar")
+
+    doFirst{
+        exec{
+            workingDir dexedArtifact.parent
+            def command = ["d8", "--min-api", pMinApi, "--output", dexedArtifact, jarArtifact]
+            if(isWindows()){
+                commandLine("cmd", "/c", *command)
+            }else{
+                commandLine(*command)
+            }
+        }
+    }
+
+    from(zipTree(jarArtifact), zipTree(dexedArtifact))
 }
 
 task buildDex dependsOn "build", "dexify"
